<resources>
    <string name="app_name">Login App</string>
    <string name="logged_in">logged In</string>
    <string name="signup_btn">Signup</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="registration">REGISTRATION</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="phone_no">Phone no</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="logname">LOGIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="resetpass">Reset</string>
    <string name="enter_registered_email">Enter Registered email</string>
</resources>